# HamuEngine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
HamuEngine/include/spdlog/details/logs/: async_log.txt  multisink.txt  new-default-log.txt
HamuEngine/src/: HamuEngine.h
HamuEngine/src/EngineCore/: Application.cpp  Application.h  Core.h  EntryPoint.h
SandBox/src/: SandBoxApp.cpp  main.cpp
include/glad/: glad.cpp  glad.h
include/spdlog/details/logs/: basic-log.txt  events-sample.txt  rotating.txt
src/: main.cpp
